--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -374,11 +374,15 @@ a:hover {
 
 .hero__img {
 	position: absolute;
-	bottom: 180px;
+	top: 65px;
 	right: 1rem;
 }
 
 .hero__img.gerty {
+	width: 100px;
+}
+
+.hero__img.salesforce {
 	width: 100px;
 }
 
@@ -392,6 +396,7 @@ a:hover {
 
 .hero__img.driveby {
 	width: 50px;
+	top: 60px;
 }
 
 .work-nav {
@@ -555,7 +560,44 @@ a:hover {
 	}
 
 	.hero__img {
-		bottom: 95px;
+		top: 65px;
+	}
+
+	.button:after {
+		content: "";
+		position: absolute;
+		bottom: -1px;
+		left: 50%;
+		width: 0;
+		height: 1px;
+		background-color: $base-accent-color;
+		transform: translate(-50%,0);
+		-webkit-transform: translate(-50%,0);
+		-webkit-transition: all 0.5s ease-in-out;
+		-moz-transition: all 0.5s ease-in-out;
+		-ms-transition: all 0.5s ease-in-out;
+		-o-transition: all 0.5s ease-in-out;
+		transition: all 0.5s ease-in-out;
+	}
+
+	.button:hover:after {
+		width: 100%;
+	}
+
+}
+
+/* lg */
+@media (min-width: 992px) {
+
+	.work-title {
+		padding-top: 3rem;
+		font-size: 5.125rem;
+		line-height: 4rem;
+	}
+
+	.work-sample .work-title {
+		font-size: 5.5rem;
+		line-height: 4rem;
 	}
 
 	.work-nav__link, .work-nav__link:visited {
@@ -589,43 +631,6 @@ a:hover {
 
 	.work-sample .work-title {
 		font-size: 4rem;
-		line-height: 2rem;
-	}
-
-	.button:after {
-		content: "";
-		position: absolute;
-		bottom: -1px;
-		left: 50%;
-		width: 0;
-		height: 1px;
-		background-color: $base-accent-color;
-		transform: translate(-50%,0);
-		-webkit-transform: translate(-50%,0);
-		-webkit-transition: all 0.5s ease-in-out;
-		-moz-transition: all 0.5s ease-in-out;
-		-ms-transition: all 0.5s ease-in-out;
-		-o-transition: all 0.5s ease-in-out;
-		transition: all 0.5s ease-in-out;
-	}
-
-	.button:hover:after {
-		width: 100%;
-	}
-
-}
-
-/* lg */
-@media (min-width: 992px) {
-
-	.work-title {
-		padding-top: 3rem;
-		font-size: 5.5rem;
-		line-height: 4rem;
-	}
-
-	.work-sample .work-title {
-		font-size: 5.5rem;
 		line-height: 3rem;
 	}
 
@@ -642,6 +647,10 @@ a:hover {
 	}
 
 	.hero__img.gerty {
+		width: 250px;
+	}
+
+	.hero__img.salesforce {
 		width: 250px;
 	}
 
@@ -664,13 +673,13 @@ a:hover {
 
 	.work-title {
 		padding-top: 5rem;
-		font-size: 8.5rem;
-		line-height: 6rem;
+		font-size: 6rem;
+		line-height: 4.5rem;
 	}
 
 	.work-sample .work-title {
 		font-size: 6rem;
-		line-height: 3rem;
+		line-height: 4.5rem;
 	}
 
 }
