--- a/new-portfolio/styles/styles.scss
+++ b/new-portfolio/styles/styles.scss
@@ -1233,10 +1233,10 @@ a:hover {
 }
 
 @keyframes hero-title {
-	0% {padding-left: 60px; opacity: 0;}
-	20% {padding-left: 60px;}
-	40% {padding-left: 60px;}
-	60% {padding-left: 60px; opacity: 1.0;}
+	0% {padding-left: 0; opacity: 0;}
+	20% {padding-left: 0;}
+	40% {padding-left: 0;}
+	60% {padding-left: 0; opacity: 1.0;}
 	80% {padding-left: 0;}
 	100% {padding-left: 0;}
 }
