--- a/new-portfolio/styles/styles.scss
+++ b/new-portfolio/styles/styles.scss
@@ -379,7 +379,7 @@ a, a:visited, a:hover {
 .home-bgd {
 	background-image: url(../images/bgd.jpg);
 	background-position: center 100px;
-	background-size: 100%;
+	background-size: 2000px;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 }
@@ -860,6 +860,10 @@ a, a:visited, a:hover {
 	60% {left: 50%;}
 	80% {left: 48%;}
 	100% {top:-100px; left: 50%;}
+}
+
+.home-bgd {
+	background-size: 120%;
 }
 
 .container {
