--- a/styles/styles.css
+++ b/styles/styles.css
@@ -700,7 +700,7 @@ a, a:visited, a:hover {
   opacity: 1; }
 
 .story {
-  padding: 4.25rem 2rem;
+  padding: 4.25rem 0;
   width: calc(100% - 320px);
   margin: 100px 0 0 320px;
   animation-name: story;
@@ -714,17 +714,17 @@ a, a:visited, a:hover {
 
 .story .story-copy {
   width: 800px;
+  padding: 0 2rem;
   margin-bottom: 3rem; }
 
 .story-img-container {
-  width: calc(100% + 4rem);
   background-color: #5FBFF9;
-  margin: 0 0 3rem -2rem;
+  margin: 0 0 3rem 0;
   padding: 4rem 0; }
 
 .story-img {
-  margin-left: 2rem;
-  width: calc(100% - 6rem);
+  padding-left: 2rem;
+  width: 99%;
   max-width: 967px; }
 
 .switch-app-video video {
@@ -850,7 +850,9 @@ a, a:visited, a:hover {
     width: 100%;
     height: 144px; }
   .story .story-copy {
-    width: 100%; } }
+    width: 100%; }
+  .story-img {
+    max-width: 95%; } }
 
 /* md */
 @media (max-width: 980px) {
@@ -1153,7 +1155,6 @@ a, a:visited, a:hover {
     padding-top: 80px;
     overflow: visible; }
   .story {
-    padding: 1.5rem;
     width: 100%;
     margin: 0; }
   .more-stories-title, .sidebar-list {
