--- a/styles/styles.css
+++ b/styles/styles.css
@@ -208,7 +208,7 @@ a, a:visited, a:hover {
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 9999;
   opacity: 0;
-  visibility: hidden;
+  display: none;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
@@ -217,7 +217,7 @@ a, a:visited, a:hover {
 
 .modal-overlay:target {
   opacity: 1;
-  visibility: visible; }
+  display: block; }
 
 .modal-overlay-close {
   position: absolute;
