--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -295,7 +295,7 @@ a, a:visited, a:hover {
 	background-color: rgba($grayscale-1000,0.8);
 	z-index: 9999;
 	opacity: 0;
-	visibility: hidden;
+	display: none;
 	-webkit-transition: all 0.3s ease-in-out;
 	-moz-transition: all 0.3s ease-in-out;
 	-ms-transition: all 0.3s ease-in-out;
@@ -305,7 +305,7 @@ a, a:visited, a:hover {
 
 .modal-overlay:target {
 	opacity: 1;
-	visibility: visible;
+	display: block;
 }
 
 .modal-overlay-close {
