--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -859,6 +859,10 @@ a, a:visited, a:hover {
 	font-weight: 500;
 }
 
+.story .footer-copy {
+	padding-left: 1.5rem;
+}
+
 /* End Website/Product Specific Styles */
 
 
