--- a/styles/styles.css
+++ b/styles/styles.css
@@ -198,61 +198,6 @@ a, a:visited, a:hover {
 
 /* End Reset/Base Styles */
 /*---------------------------------------------------------------------*/
-/* Begin Module/Universal Styles */
-.modal-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 9999;
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out; }
-
-.modal-overlay:target {
-  opacity: 1;
-  visibility: visible; }
-
-.modal-overlay-close {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  cursor: default;
-  text-indent: -9999px; }
-
-.modal-container {
-  position: absolute;
-  top: 200px;
-  left: 50%;
-  transform: translate(-50%, 0);
-  width: 650px;
-  padding: 2rem;
-  background-color: #FFFFFF;
-  border-radius: 8px; }
-
-.modal-close {
-  position: absolute;
-  top: -16px;
-  right: -16px; }
-
-.modal-close .fa-times-circle {
-  font-size: 2.5rem;
-  color: #000000;
-  background-color: #FFFFFF;
-  border-radius: 50%;
-  border: 4px solid #FFFFFF; }
-
-.modal-container p {
-  margin: 0; }
-
-/* End Module/Universal Styles */
-/*---------------------------------------------------------------------*/
 /* Begin Website/Product Specific Styles */
 .snow-bgd {
   position: fixed;
@@ -761,6 +706,61 @@ a, a:visited, a:hover {
 
 /* End Website/Product Specific Styles */
 /*---------------------------------------------------------------------*/
+/* Begin Module/Universal Styles */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 9999;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out; }
+
+.modal-overlay:target {
+  opacity: 1;
+  visibility: visible; }
+
+.modal-overlay-close {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  cursor: default;
+  text-indent: -9999px; }
+
+.modal-container {
+  position: absolute;
+  top: 200px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 650px;
+  padding: 2rem;
+  background-color: #FFFFFF;
+  border-radius: 8px; }
+
+.modal-close {
+  position: absolute;
+  top: -16px;
+  right: -16px; }
+
+.modal-close .fa-times-circle {
+  font-size: 2.5rem;
+  color: #000000;
+  background-color: #FFFFFF;
+  border-radius: 50%;
+  border: 4px solid #FFFFFF; }
+
+.modal-container p {
+  margin: 0; }
+
+/* End Module/Universal Styles */
+/*---------------------------------------------------------------------*/
 /* 7. Begin Responsive/Media Queries */
 /* lg */
 @media screen and (max-width: 1220px) {
@@ -987,7 +987,8 @@ a, a:visited, a:hover {
       top: -80px;
       left: 50%; } }
   .home-bgd {
-    background-position: center 80px; }
+    background-position: center 80px;
+    background-size: 150%; }
   .container {
     width: 540px; }
   .modal-container {
