--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -284,73 +284,6 @@ a, a:visited, a:hover {
 /*---------------------------------------------------------------------*/
 
 
-/* Begin Module/Universal Styles */
-
-.modal-overlay {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba($grayscale-1000,0.8);
-	z-index: 9999;
-	opacity: 0;
-	visibility: hidden;
-	-webkit-transition: all 0.3s ease-in-out;
-	-moz-transition: all 0.3s ease-in-out;
-	-ms-transition: all 0.3s ease-in-out;
-	-o-transition: all 0.3s ease-in-out;
-	transition: all 0.3s ease-in-out;
-}
-
-.modal-overlay:target {
-	opacity: 1;
-	visibility: visible;
-}
-
-.modal-overlay-close {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	cursor: default;
-	text-indent: -9999px;
-}
-
-.modal-container {
-	position: absolute;
-	top: 200px;
-	left: 50%;
-	transform: translate(-50%,0);
-	width: 650px;
-	padding: 2rem;
-	background-color: $grayscale-0;
-	border-radius: 8px;
-}
-
-.modal-close {
-	position: absolute;
-	top: -16px;
-	right: -16px;
-}
-
-.modal-close .fa-times-circle {
-	font-size: 2.5rem;
-	color: $grayscale-1000;
-	background-color: $grayscale-0;
-	border-radius: 50%;
-	border: 4px solid $grayscale-0;
-}
-
-.modal-container p {
-	margin: 0;
-}
-
-/* End Module/Universal Styles */
-
-
-/*---------------------------------------------------------------------*/
-
-
 /* Begin Website/Product Specific Styles */
 
 .snow-bgd {
@@ -868,6 +801,74 @@ a, a:visited, a:hover {
 
 /*---------------------------------------------------------------------*/
 
+
+/* Begin Module/Universal Styles */
+
+.modal-overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba($grayscale-1000,0.8);
+	z-index: 9999;
+	opacity: 0;
+	visibility: hidden;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+
+.modal-overlay:target {
+	opacity: 1;
+	visibility: visible;
+}
+
+.modal-overlay-close {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	cursor: default;
+	text-indent: -9999px;
+}
+
+.modal-container {
+	position: absolute;
+	top: 200px;
+	left: 50%;
+	transform: translate(-50%,0);
+	width: 650px;
+	padding: 2rem;
+	background-color: $grayscale-0;
+	border-radius: 8px;
+}
+
+.modal-close {
+	position: absolute;
+	top: -16px;
+	right: -16px;
+}
+
+.modal-close .fa-times-circle {
+	font-size: 2.5rem;
+	color: $grayscale-1000;
+	background-color: $grayscale-0;
+	border-radius: 50%;
+	border: 4px solid $grayscale-0;
+}
+
+.modal-container p {
+	margin: 0;
+}
+
+/* End Module/Universal Styles */
+
+
+/*---------------------------------------------------------------------*/
+
+
 /* 7. Begin Responsive/Media Queries */
 
 /* lg */
@@ -1097,6 +1098,7 @@ a, a:visited, a:hover {
 
 .home-bgd {
 	background-position: center 80px;
+	background-size: 150%;
 }
 
 .container {
