--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -270,12 +270,17 @@ a, a:visited, a:hover {
 	font-family: $base-font;
 	font-weight: 700;
 	color: $base-primary-color;
-	text-decoration: none;
+	text-decoration: underline;
+	text-decoration-style: dotted;
 	-webkit-transition: all 0.3s ease-in-out;
 	-moz-transition: all 0.3s ease-in-out;
 	-ms-transition: all 0.3s ease-in-out;
 	-o-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
+}
+
+a:hover {
+	text-decoration-style: solid;
 }
 
 /* End Reset/Base Styles */
