--- a/styles/styles.css
+++ b/styles/styles.css
@@ -190,7 +190,6 @@ a, a:visited, a:hover {
   font-weight: 700;
   color: #5FBFF9;
   text-decoration: underline;
-  text-decoration-style: dotted;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
@@ -198,7 +197,7 @@ a, a:visited, a:hover {
   transition: all 0.3s ease-in-out; }
 
 a:hover {
-  text-decoration-style: solid; }
+  text-decoration: none; }
 
 /* End Reset/Base Styles */
 /*---------------------------------------------------------------------*/
