--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -271,7 +271,6 @@ a, a:visited, a:hover {
 	font-weight: 700;
 	color: $base-primary-color;
 	text-decoration: underline;
-	text-decoration-style: dotted;
 	-webkit-transition: all 0.3s ease-in-out;
 	-moz-transition: all 0.3s ease-in-out;
 	-ms-transition: all 0.3s ease-in-out;
@@ -280,7 +279,7 @@ a, a:visited, a:hover {
 }
 
 a:hover {
-	text-decoration-style: solid;
+	text-decoration: none;
 }
 
 /* End Reset/Base Styles */
