--- a/styles/styles.css
+++ b/styles/styles.css
@@ -249,6 +249,7 @@ a:hover {
   top: 0;
   height: 100px;
   background-color: #0C1821;
+  background-image: url(../images/bgd-noise.png);
   z-index: 9998;
   border-bottom: 1px solid rgba(255, 255, 255, 0.15); }
 
