--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -333,6 +333,7 @@ a:hover {
 	top: 0;
 	height: 100px;
 	background-color: $brand-color;
+	background-image: url(../images/bgd-noise.png);
 	z-index: 9998;
 	border-bottom: 1px solid rgba($grayscale-0,0.15);
 }
