--- a/styles/styles.css
+++ b/styles/styles.css
@@ -250,8 +250,7 @@ a:hover {
   height: 100px;
   background-color: #0C1821;
   background-image: url(../images/bgd-noise.png);
-  z-index: 9998;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.15); }
+  z-index: 9998; }
 
 .header .container {
   background-image: url(../images/header-bgd.svg);
