--- a/styles/styles.css
+++ b/styles/styles.css
@@ -250,12 +250,13 @@ a:hover {
   height: 100px;
   background-color: #0C1821;
   background-image: url(../images/bgd-noise.png);
-  z-index: 9998; }
+  z-index: 9998;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
 
 .header .container {
   background-image: url(../images/header-bgd.svg);
   background-repeat: no-repeat;
-  background-position: 30px 16px; }
+  background-position: 45px 7px; }
 
 .header-story .container {
   margin: 0 0 0 1rem; }
@@ -268,22 +269,22 @@ a:hover {
   display: flex; }
 
 .header-menu-logo {
-  width: 78px;
-  height: 105px;
+  width: 45px;
+  height: 77px;
   text-indent: -9999px;
   background-image: url(../images/sword-and-shield-logo.svg);
   background-size: 100%;
   background-repeat: no-repeat;
-  margin: 1.5rem 3rem 0 0; }
+  margin: 0.688rem 2rem 0 0; }
 
 .header-menu-logo a, .header-menu-logo a:visited {
-  display: block;
-  width: 78px;
-  height: 105px; }
+  width: 45px;
+  height: 77px;
+  display: block; }
 
 .header-menu-link, .header-menu-link:visited {
   color: #FFFFFF;
-  margin-right: 3rem;
+  margin: 1.5rem 2rem 0 0;
   align-self: center;
   text-decoration: none;
   position: relative; }
@@ -291,10 +292,10 @@ a:hover {
 .header-menu-link::after {
   content: "";
   position: absolute;
-  bottom: -27px;
+  bottom: -10px;
   left: 50%;
   transform: translate(-50%, 0);
-  width: 50px;
+  width: 0;
   height: 3px;
   background-color: rgba(246, 245, 174, 0);
   border-radius: 6px;
@@ -305,7 +306,8 @@ a:hover {
   transition: all 0.3s ease-in-out; }
 
 .header-menu-link:hover::after, .header-menu-link.active::after {
-  background-color: #f6f5ae; }
+  background-color: #f6f5ae;
+  width: 40px; }
 
 .header-menu-link:hover, .header-menu-link.active {
   color: #F6F5AE; }
@@ -315,7 +317,7 @@ a:hover {
   justify-content: flex-end; }
 
 .header-menu-right .header-menu-link {
-  margin: 0 0 0 3rem; }
+  margin: 1.5rem 0 0 2rem; }
 
 .hero {
   margin-top: 100px;
@@ -600,6 +602,7 @@ a:hover {
   width: 320px;
   height: 100%;
   background-color: #0C1821;
+  background-image: url(../images/bgd-noise.png);
   padding: 1.5rem;
   padding-top: 115px;
   overflow: scroll;
@@ -684,7 +687,8 @@ a:hover {
   font-weight: 500;
   background-color: #359DDB;
   padding: 0.75rem 1rem 0.75rem 2rem;
-  margin-top: 1rem; }
+  margin-top: 1rem;
+  line-height: 1.375rem; }
 
 .dave-dechant {
   border-radius: 50%;
@@ -789,8 +793,8 @@ a:hover {
   .container {
     width: 960px; }
   .header .container {
-    background-size: 60%;
-    background-position: 240px 15px; }
+    background-size: 82%;
+    background-position: 45px 17px; }
   @keyframes hero-title {
     0% {
       padding-left: 250px;
@@ -882,13 +886,9 @@ a:hover {
   .container {
     width: 720px; }
   .header .container {
-    background-size: 82%;
-    background-position: 10px 15px; }
+    background: none; }
   .header-menu-link, .header-menu-link:visited {
-    margin-right: 2rem;
     font-size: 0.875rem; }
-  .header-menu-right .header-menu-link {
-    margin: 0 0 0 2rem; }
   .hero {
     padding: 150px 0 0; }
   .hero-title {
@@ -1000,23 +1000,18 @@ a:hover {
     padding: 1.5rem; }
   .header {
     height: 80px; }
-  .header .container {
-    background: none; }
-  .header-menu {
-    display: flex;
-    justify-content: space-between; }
   .header-menu-logo {
-    width: 60px;
-    height: 80px;
-    margin: 1rem 1.5rem 0 0; }
+    width: 40px;
+    height: 68px;
+    margin: 0.375rem 1rem 0 0; }
   .header-menu-logo a, .header-menu-logo a:visited {
-    width: 60px;
-    height: 80px; }
+    width: 40px;
+    height: 68px; }
   .header-menu-link, .header-menu-link:visited {
-    margin-right: 1rem;
+    margin: 1rem 1rem 0 0;
     font-size: 0.813rem; }
   .header-menu-right .header-menu-link {
-    margin: 0 0 0 1rem; }
+    margin: 1rem 0 0 1rem; }
   .hero {
     padding: 50px 0 0; }
   .hero-title {
@@ -1205,11 +1200,16 @@ a:hover {
     width: 60px;
     float: right; }
   .header-menu-logo {
-    margin: -0.5rem 0.5rem 0 0;
+    width: 34px;
+    height: 58px;
+    margin: -0.75rem 1rem 0 0;
     display: inline-block;
     float: left;
     position: relative;
     z-index: 100; }
+  .header-menu-logo a, .header-menu-logo a:visited {
+    width: 40px;
+    height: 68px; }
   .header-menu-link, .header-menu-link:visited, .header-menu-right .header-menu-link {
     display: block;
     margin: 0 0 0.75rem 0; }
