--- a/styles/styles.css
+++ b/styles/styles.css
@@ -251,7 +251,8 @@ a:hover {
   background-color: #0C1821;
   background-image: url(../images/bgd-noise.png);
   z-index: 9998;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5), 0 0 4px 0 rgba(0, 0, 0, 0.5), 0 0 8px 0 rgba(0, 0, 0, 0.5); }
 
 .header .container {
   background-image: url(../images/header-bgd.svg);
