Updated Sidebar Transform

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -612,9 +612,9 @@ a:hover {
 
 @keyframes sidebar {
   0% {
-    left: -320px; }
+    transform: translate(-320px, 0); }
   100% {
-    left: 0; } }
+    transform: translate(0, 0); } }
 
 .sidebar-list {
   margin: 0; }
