--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -690,8 +690,8 @@ a:hover {
 }
 
 @keyframes sidebar {
-	0% {left: -320px;}
-	100% {left: 0;}
+	0% {transform:translate(-320px,0);}
+	100% {transform:translate(0,0);}
 }
 
 .sidebar-list {
